# ADVANCED_DJANGO

./: README.md
Practices/task_management/: .env  Makefile  create_superuser.py  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
Practices/task_management/.github/workflows/: main.yml
Practices/task_management/additional_tasks/: apps.py  forms.py  urls.py  views.py
Practices/task_management/additional_tasks/migrations/: 0001_initial.py
Practices/task_management/api/migrations/: 0001_initial.py
Practices/task_management/core/: admin.py  models.py  serializers.py  urls.py  views.py
Practices/task_management/core/migrations/: 0001_initial.py  0002_alter_task_assignee.py
Practices/task_management/cv_resumes/: buy_reservation.py
Practices/task_management/email_app/: admin.py  ai_analyzer.py  models.py  serializers.py  tests.py  urls.py  views.py
Practices/task_management/email_app/migrations/: 0001_initial.py
Practices/task_management/expenses/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
Practices/task_management/frontend/: package-lock.json  package.json
Practices/task_management/frontend/src/: App.vue  (+2 more)
Practices/task_management/jobs/: tasks.py
Practices/task_management/practise3/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Practices/task_management/task_management/: celery.py  settings.py  urls.py
Practices/task_management/templates/: base.html  cv_list.html  success.html
Practices/task_management/todolist/: views.py
Practices/task_management/users/: models.py
(+13 files in other folders)
