[tool.poetry]
name = "task-management"
version = "0.1.0"
description = ""
authors = ["Ramazan Syrlybay <syrlybai056@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
djangorestframework = "^3.15.2"
rest-framework-simplejwt = "^0.0.2"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.4.0"
django-filter = "^24.3"
django-environ = "^0.12.0"
pillow = "^11.1.0"
drf-yasg = "^1.21.8"
djoser = "^2.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
bandit = "^1.7.6"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
